# horizon

./: .pre-commit-config.yaml  plugin-registry.csv  pyproject.toml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/source/configuration/: settings.rst
doc/source/contributor/tutorials/: plugin.rst
doc/source/user/: launch-instances.rst
horizon/templates/horizon/: _sidebar.html
horizon/utils/: scss_filter.py
openstack_auth/: views.py
openstack_dashboard/: defaults.py
openstack_dashboard/api/: keystone.py  neutron.py
openstack_dashboard/dashboards/project/images/: tests.py  views.py
openstack_dashboard/dashboards/project/instances/: tests.py
openstack_dashboard/locale/as/LC_MESSAGES/: django.po
openstack_dashboard/locale/bn_IN/LC_MESSAGES/: django.po
openstack_dashboard/locale/brx/LC_MESSAGES/: django.po
openstack_dashboard/locale/cs/LC_MESSAGES/: django.po
openstack_dashboard/locale/de/LC_MESSAGES/: django.po
openstack_dashboard/locale/en_AU/LC_MESSAGES/: django.po
openstack_dashboard/locale/en_GB/LC_MESSAGES/: django.po
openstack_dashboard/locale/eo/LC_MESSAGES/: django.po
openstack_dashboard/locale/es/LC_MESSAGES/: django.po
openstack_dashboard/locale/fr/LC_MESSAGES/: django.po
openstack_dashboard/locale/gu/LC_MESSAGES/: django.po
openstack_dashboard/test/integration_tests/: config.py  horizon.conf
openstack_dashboard/test/selenium/: conftest.py  widgets.py
releasenotes/notes/: change-metadef-for-cinder-volume-type-f65dd215d2a3ce75.yaml
tools/: selenium_tests.sh  unit_tests.sh
(+57 files in other folders)
