[metadata]
name = horizon

[coverage:report]
ignore_errors = True
include =
    horizon/*
    openstack_dashboard/*
    openstack_auth/*
omit =
    /usr*
    setup.py
    *egg*
    .venv/*

[coverage:html]
directory = reports

[extract_messages]
keywords = gettext_noop gettext_lazy ngettext_lazy:1,2 ugettext_noop ugettext_lazy ungettext_lazy:1,2 npgettext:1c,2,3 pgettext_lazy:1c,2 npgettext_lazy:1c,2,3
add_comments = Translators:
